After the quote

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-		
+
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
@@ -16,7 +16,13 @@
 					<div id="intro">
 						<h1>Hey! I'm<br />
 						Sushil Patil</h1>
-						<p>This is my blog </a>.</p>
+						<p>
+							<blockquote>I shall be telling this with a sigh <br>
+							Somewhere ages and ages hence:<br>
+							Two roads diverged in a wood, and I,<br>
+							I took the one less travelled by,<br>
+							And that has made all the difference.</blockquote>
+						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
