--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 						<h1>Hey! I'm<br />
 						Sushil Patil</h1>
 						<p>
-							<blockquote>I shall be telling this with a sigh <br>
-							Somewhere ages and ages hence:<br>
-							Two roads diverged in a wood, and I,<br>
-							I took the one less travelled by,<br>
+							<blockquote>I shall be telling this with a sigh, Somewhere ages and ages hence:<br>
+							Two roads diverged in a wood, and I, I took the one less travelled by,<br>
 							And that has made all the difference.</blockquote>
 						</p>
 						<ul class="actions">
