--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 						<h1>Hey! I'm<br />
 						Sushil Patil</h1>
 						<p>
-							<blockquote>I shall be telling this with a sigh, Somewhere ages and ages hence:<br>
-							Two roads diverged in a wood, and I, I took the one less travelled by,<br>
-							And that has made all the difference.</blockquote>
+							Data -> Information -> Insights
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -34,9 +32,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">About me</a></li>
+							<li><a href="generic.html">CV</a></li>
+							<li><a href="elements.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -52,16 +50,24 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<!-- <span class="date">Last Updated : Dec 2019</span> -->
+									<h2><a href="#">About me</a></h2>
+									<p>I am a Technology Enthusiast, currently pursuing MBA from Indian Institute of Management, Kashipur.
+										After a hands-on experience in solving a real-life business problem in Pune, by developing a Service Based online platform called BOOK BAZAAR (thebookbazaar.in), I have learned :
+										Business Development
+										Defining Business Processes
+										Marketing and Negotiation
+										Public Relations
+
+I am passionate about technology, innovative products, and initiatives. I am highly focused with a comprehensive understanding of Business Intelligence, Entrepreneurship, Computers, Electronics, and Digital Signal Processing.
+
+I have built and  published a patent on a device for visually impaired people, to help them walk without a stick in 2018. The device uses a machine learning algorithm to recognize an obstacle and also calculate the distance from the user. It gives an output through the earphones in the form - "There is a chair in front within 1 meter", i.e. it tells the user the name of the obstacle along with the distance.
+
+Personal Interests - Poetry, Dancing, Acting.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<!-- <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="#" class="button large">Read More</a></li>
 								</ul>
 							</article>
 
@@ -69,91 +75,69 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<!-- <span class="date">April 24, 2017</span> -->
+										<h2><a href="#">Auditory cues for blind people using computer vision : Drishti<br />
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Drishti is a palm-sized portable device for visually impaired people, which
+										harnesses the power of artificial intelligence (AI) based obstacle recognition to
+										gain more independence by giving real-time auditory cues of the objects in front
+										of the user.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<!-- <span class="date">April 22, 2017</span> -->
+										<h2><a href="#">Border Security Serveillance Bot</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<!-- <span class="date">April 18, 2017</span> -->
+										<h2><a href="#">Drowziness detection device while driving</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<!-- <span class="date">April 14, 2017</span> -->
+										<h2><a href="#">Testing Classification Algorithms on Wisconsin Breast Cancer Dataset</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="#" class="button">Read More</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
+
+
 							</section>
 
 						<!-- Footer -->
 							<footer>
-								<div class="pagination">
+								<!-- <div class="pagination"> -->
 									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
+									<!-- <a href="#" class="page active">1</a>
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
+									<a href="#" class="next">Next</a> -->
+								<!-- </div> -->
 							</footer>
 
 					</div>
