--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 									<h2><a href="#">About me</a></h2>
 									<p>I am a Technology Enthusiast, currently pursuing MBA from Indian Institute of Management, Kashipur.
 										After a hands-on experience in solving a real-life business problem in Pune, by developing a Service Based online platform called BOOK BAZAAR (thebookbazaar.in), I have learned :
-										Business Development
-										Defining Business Processes
-										Marketing and Negotiation
+										Business Development,
+										Defining Business Processes,
+										Marketing and Negotiation, and
 										Public Relations
 
 I am passionate about technology, innovative products, and initiatives. I am highly focused with a comprehensive understanding of Business Intelligence, Entrepreneurship, Computers, Electronics, and Digital Signal Processing.
@@ -79,7 +79,7 @@ Personal Interests - Poetry, Dancing, Acting.</p>
 										<h2><a href="#">Auditory cues for blind people using computer vision : Drishti<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/drishti_device.png" alt="" /></a>
 									<p>Drishti is a palm-sized portable device for visually impaired people, which
 										harnesses the power of artificial intelligence (AI) based obstacle recognition to
 										gain more independence by giving real-time auditory cues of the objects in front
@@ -94,7 +94,12 @@ Personal Interests - Poetry, Dancing, Acting.</p>
 										<h2><a href="#">Border Security Serveillance Bot</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>With the increasing number of insurgencies over the Indian
+										Border, a lot of soldiers were martyred in recent years. To
+										solve this problem my team and I built a bot which uses image
+										processing to detect a human presence in front of it.
+										This bot is also capable of tracking the target and shooting
+										it when the person is on target.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
@@ -102,9 +107,11 @@ Personal Interests - Poetry, Dancing, Acting.</p>
 								<article>
 									<header>
 										<!-- <span class="date">April 18, 2017</span> -->
-										<h2><a href="#">Drowziness detection device while driving</a></h2>
+										<h2><a href="#">Driver Fatigue Detection using Computer Vision</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit">
+										<img src="images/pic04.jpg" alt="" />
+									</a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
