After home page

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">About me</a></li>
-							<li><a href="generic.html">CV</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="elements.html">Projects</a></li>
+							<li><a href="generic.html">CV</a></li>
+							<li><a href="about_me.html">About me</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -93,7 +94,7 @@ Personal Interests - Poetry, Dancing, Acting.</p>
 										<!-- <span class="date">April 22, 2017</span> -->
 										<h2><a href="#">Border Security Serveillance Bot</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/bot.jpeg" alt="" /></a>
 									<p>With the increasing number of insurgencies over the Indian
 										Border, a lot of soldiers were martyred in recent years. To
 										solve this problem my team and I built a bot which uses image
@@ -110,9 +111,14 @@ Personal Interests - Poetry, Dancing, Acting.</p>
 										<h2><a href="#">Driver Fatigue Detection using Computer Vision</a></h2>
 									</header>
 									<a href="#" class="image fit">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/driver_device.jpg" alt="" />
 									</a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>.The objective of this project is to build a harware unit that will monitor the driver’s alertness by observing
+										 his/her eyes and head movements. If the unit deduces
+										   that the driver’s eyes are drooping
+											 down due to sleepiness or his/her head is tilting in forward
+											  direction, the unit will sound an audible alarm which will
+												 alert the driver and he can take corrective action.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
@@ -122,8 +128,10 @@ Personal Interests - Poetry, Dancing, Acting.</p>
 										<!-- <span class="date">April 14, 2017</span> -->
 										<h2><a href="#">Testing Classification Algorithms on Wisconsin Breast Cancer Dataset</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/breast_cancer.jpg" alt="" /></a>
+									<p>The objective of this project is to analysis the performance of different classification techniques option
+									 the very famous data set - Wisconsin Breast Cancer Dataset. The classification techniques include Neural Networks,
+								  SVM, Decision Trees, Logistic Regression etc.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Read More</a></li>
 									</ul>
