--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Float101010</title>
+		<title>Sushil Patil</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,10 @@
 						<h1>Hey! I'm<br />
 						Sushil Patil</h1>
 						<p>
-							Data -> Information -> Insights
+							I believe that a perfect way to solve any problem is to ask the
+							right questions. <br>
+							Moreover, we fail more often because we solve the wrong problem than because
+							 we get the wrong solution to the right problem.
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -26,15 +29,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Float101010</a>
+						<a href="index.html" class="logo">Home</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="elements.html">Projects</a></li>
-							<li><a href="generic.html">CV</a></li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="cv.html">CV</a></li>
 							<li><a href="about_me.html">About me</a></li>
 						</ul>
 						<ul class="icons">
@@ -53,22 +56,23 @@
 								<header class="major">
 									<!-- <span class="date">Last Updated : Dec 2019</span> -->
 									<h2><a href="#">About me</a></h2>
-									<p>I am a Technology Enthusiast, currently pursuing MBA from Indian Institute of Management, Kashipur.
-										After a hands-on experience in solving a real-life business problem in Pune, by developing a Service Based online platform called BOOK BAZAAR (thebookbazaar.in), I have learned :
-										Business Development,
-										Defining Business Processes,
-										Marketing and Negotiation, and
-										Public Relations
-
-I am passionate about technology, innovative products, and initiatives. I am highly focused with a comprehensive understanding of Business Intelligence, Entrepreneurship, Computers, Electronics, and Digital Signal Processing.
-
-I have built and  published a patent on a device for visually impaired people, to help them walk without a stick in 2018. The device uses a machine learning algorithm to recognize an obstacle and also calculate the distance from the user. It gives an output through the earphones in the form - "There is a chair in front within 1 meter", i.e. it tells the user the name of the obstacle along with the distance.
-
-Personal Interests - Poetry, Dancing, Acting.</p>
+									<p>I am an aggressive problem solver with a dedicated
+										result-oriented approach.<br>
+									</p>
 								</header>
+
+										<p>I am absolutely fascinated by the impact of technology on
+										our lives and the innovation happening around us. It has
+										helped us save time, money and efforts. It has helped big
+										organisations reduce costs, increase revenues, improve product
+										quality, find the right customers and the list goes on.<br>
+
+										As an Electronics Engineer with a keen interest in Computer
+										 Science [Batch 2014-2018] I learnt the art of.......</p>
+
 								<!-- <a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a> -->
 								<ul class="actions special">
-									<li><a href="#" class="button large">Read More</a></li>
+									<li><a href="about_me.html" class="button large">Read More</a></li>
 								</ul>
 							</article>
 
@@ -129,7 +133,7 @@ Personal Interests - Poetry, Dancing, Acting.</p>
 										<h2><a href="#">Testing Classification Algorithms on Wisconsin Breast Cancer Dataset</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/breast_cancer.jpg" alt="" /></a>
-									<p>The objective of this project is to analysis the performance of different classification techniques option
+									<p>The objective of this project is to analyse the performance of different classification techniques option
 									 the very famous data set - Wisconsin Breast Cancer Dataset. The classification techniques include Neural Networks,
 								  SVM, Decision Trees, Logistic Regression etc.</p>
 									<ul class="actions special">
