--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="projects.html">Projects</a></li>
+							<li><a href="index.html/#projects">Projects</a></li>
 							<li class="active"><a href="cv.html">CV</a></li>
 							<li><a href="about_me.html">About me</a></li>
 						</ul>
