--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="projects.html">Projects</a></li>
 							<li><a href="cv.html">CV</a></li>
+							<li><a href="index.html/#projects">Projects</a></li>
 							<li><a href="about_me.html">About me</a></li>
 						</ul>
 						<ul class="icons">
@@ -76,12 +76,12 @@
 								</ul>
 							</article>
 
-						<!-- Posts -->
-							<section class="posts">
+						<!-- Projects -->
+							<section class="posts" id="projects">
 								<article>
 									<header>
 										<!-- <span class="date">April 24, 2017</span> -->
-										<h2><a href="#">Auditory cues for blind people using computer vision : Drishti<br />
+										<h2><a href="drishti.html">ARTIFICIAL INTELLIGENCE (AI) BASED OBSTACLE DETECTION DEVICE FOR ASSISTING A VISUALLY IMPAIRED USER: Drishti<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/drishti_device.png" alt="" /></a>
@@ -90,7 +90,7 @@
 										gain more independence by giving real-time auditory cues of the objects in front
 										of the user.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Read More</a></li>
+										<li><a href="drishti.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
