--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="cv.html">CV</a></li>
 							<li><a href="index.html/#projects">Projects</a></li>
+							<li><a href="cv.html">CV</a></li>
 							<li><a href="about_me.html">About me</a></li>
 						</ul>
 						<ul class="icons">
@@ -62,8 +62,8 @@
 								</header>
 
 										<p>I am absolutely fascinated by the impact of technology on
-										our lives and the innovation happening around us. It has
-										helped us save time, money and efforts. It has helped big
+										our lives and the innovation happening around us with the advent of AI, ML, NLP, Robotics etc.
+										It has helped us save time, money and efforts. It has helped big
 										organisations reduce costs, increase revenues, improve product
 										quality, find the right customers and the list goes on.<br>
 
