--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 22, 2017</span> -->
-										<h2><a href="#">Border Security Serveillance Bot</a></h2>
+										<h2><a href="border_security.html">Border Security Serveillance Bot</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/bot.jpeg" alt="" /></a>
 									<p>With the increasing number of insurgencies over the Indian
@@ -106,7 +106,7 @@
 										This bot is also capable of tracking the target and shooting
 										it when the person is on target.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Read More</a></li>
+										<li><a href="border_security.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
