--- a/about_me.html
+++ b/about_me.html
@@ -26,6 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html/#projects">Projects</a></li>
 							<li><a href="cv.html">CV</a></li>
 							<li class="active"><a href="about_me.html">About me</a></li>
 						</ul>
