--- a/about_me.html
+++ b/about_me.html
@@ -71,7 +71,7 @@
 									Wherever I contribute my efforts, I first find the purpose
 									behind it and then start. So, all the projects that I have
 									done till now, solve a real-life problem, they have a purpose.
-									To read more about the projects you can visit: https://sushilmdpatil.github.io
+									To see the projects <a href="index.html/#projects">click here</a>.
  								</p>
 
 								<header>
