--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<header class="major">
 									<!-- <span class="date">Last Updated : Dec 2019</span> -->
 									<h2><a href="#">About me</a></h2>
-									<p>I am an aggressive problem solver with a dedicated
+									<p>An aggressive problem solver with a dedicated
 										result-oriented approach.<br>
 									</p>
 								</header>
@@ -96,13 +96,13 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 22, 2017</span> -->
-										<h2><a href="border_security.html">Border Security Serveillance Bot</a></h2>
+										<h2><a href="border_security.html">Border Security Serveillance Bot with Controlled Ammunitions</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/bot.jpeg" alt="" /></a>
 									<p>With the increasing number of insurgencies over the Indian
 										Border, a lot of soldiers were martyred in recent years. To
-										solve this problem my team and I built a bot which uses image
-										processing to detect a human presence in front of it.
+										solve this problem my team and I built a bot which uses computer vision
+										to detect a human presence in front of it.
 										This bot is also capable of tracking the target and shooting
 										it when the person is on target.</p>
 									<ul class="actions special">
@@ -112,7 +112,7 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 18, 2017</span> -->
-										<h2><a href="#">Driver Fatigue Detection using Computer Vision</a></h2>
+										<h2><a href="driver_fatigue.html">Driver Fatigue Detection using Computer Vision</a></h2>
 									</header>
 									<a href="#" class="image fit">
 										<img src="images/driver_device.jpg" alt="" />
@@ -124,7 +124,7 @@
 											  direction, the unit will sound an audible alarm which will
 												 alert the driver and he can take corrective action.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Read More</a></li>
+										<li><a href="driver_fatigue.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 								<article>
