--- a/index.html
+++ b/index.html
@@ -117,12 +117,13 @@
 									<a href="#" class="image fit">
 										<img src="images/driver_device.jpg" alt="" />
 									</a>
-									<p>.The objective of this project is to build a harware unit that will monitor the driver’s alertness by observing
-										 his/her eyes and head movements. If the unit deduces
-										   that the driver’s eyes are drooping
-											 down due to sleepiness or his/her head is tilting in forward
-											  direction, the unit will sound an audible alarm which will
-												 alert the driver and he can take corrective action.</p>
+									<p>The objective of this project is to build a harware unit
+										that will monitor the driver’s alertness by observing
+										his/her eyes and head movements. If the unit deduces
+										that the driver’s eyes are drooping
+										down due to sleepiness or his/her head is tilting in forward
+										direction, the unit will sound an audible alarm which will
+										alert the driver and he can take corrective action.</p>
 									<ul class="actions special">
 										<li><a href="driver_fatigue.html" class="button">Read More</a></li>
 									</ul>
