--- a/driver_fatigue.html
+++ b/driver_fatigue.html
@@ -50,7 +50,8 @@
 								</header>
 								<div class="box">
 									<p>
-										The objective of this project is to build a device
+										<span class="image right"><iframe width="auto" height="350" src="https://www.youtube.com/embed/nlZO8K9zF4Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span><br>
+											The objective of this project is to build a device
 											that will monitor the driver’s alertness by observing
 											his/her eyes and head movements. If the unit deduces
 											that the driver’s eyes are drooping
@@ -70,6 +71,7 @@
 									</p>
 								</div>
 								<div>
+
 									<p>
 										India ranks among the top in the world in road accidents
 										and death. In 2016, India witnessed over 480,000 accidents,
@@ -82,8 +84,30 @@
 										stress levels in drivers. The stress induces sleepiness and
 										fatigue. With fatigue, the drivers are more prone to making
 										error leading to a road accident.
+										<br>
+										Our solution aims to detect stress and sleepiness of the driver.
+										It will monitor and alert the driver before it is too late. <br>
+										This solution could immensely benefit the following entities
+										<ul>
+											<li>State Transport Corporations</li>
+											<li>Commercial Vehicles carrying goods</li>
+											<li>Private Fleet Owners</li>
+											<li>Trains</li>
+											<li>Oil / Chemical Tankers</li>
+											<li>Insurance Companies</li>
+										</ul>
 
-										
+										This unit can mounted in front of the driver – behind the
+										steering wheel of the vehicle. It is an application which
+										can run on a dedicated hardware unit. The unit will continue to silently monitor the driver.
+										The unit will monitor the driver’s alertness by observing his/her eyes and head movements.
+										If the unit deduces that the driver’s eyes are drooping down due to sleepiness or
+										his/her head is tilting in forward direction, the unit will s
+										ound an audible alarm which will alert the driver and
+										he can take corrective action.
+
+
+
 									 </div>
 
 							</section>
