Updated all projects

--- a/driver_fatigue.html
+++ b/driver_fatigue.html
@@ -49,8 +49,7 @@
 									<p>Prevent car accidents that happen due to fatigue or drowziness</p>
 								</header>
 								<div class="box">
-									<p>
-										<span class="image right"><iframe width="auto" height="350" src="https://www.youtube.com/embed/nlZO8K9zF4Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></span><br>
+									<p><span class="image left"><img src="images/df_demo.png" alt="" /></span>
 											The objective of this project is to build a device
 											that will monitor the driver’s alertness by observing
 											his/her eyes and head movements. If the unit deduces
@@ -96,7 +95,7 @@
 											<li>Oil / Chemical Tankers</li>
 											<li>Insurance Companies</li>
 										</ul>
-
+										<h2>How it works?</h2>
 										This unit can mounted in front of the driver – behind the
 										steering wheel of the vehicle. It is an application which
 										can run on a dedicated hardware unit. The unit will continue to silently monitor the driver.
