--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 								<article>
 									<header>
 										<!-- <span class="date">April 14, 2017</span> -->
-										<h2><a href="#">Testing Classification Algorithms on Wisconsin Breast Cancer Dataset</a></h2>
+										<h2><a href="breast_cancer.html">Testing Classification Algorithms on Wisconsin Breast Cancer Dataset</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/breast_cancer.jpg" alt="" /></a>
-									<p>The objective of this project is to analyse the performance of different classification techniques option
+									<p>The objective of this project is to analyse the performance of different classification techniques on
 									 the very famous data set - Wisconsin Breast Cancer Dataset. The classification techniques include Neural Networks,
 								  SVM, Decision Trees, Logistic Regression etc.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Read More</a></li>
+										<li><a href="breast_cancer.html" class="button">Read More</a></li>
 									</ul>
 								</article>
 
