--- a/driver_fatigue.html
+++ b/driver_fatigue.html
@@ -46,7 +46,7 @@
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h2>Driver Fatigue Detection using Computer Vision</h2>
-									<p>Prevent car accidents that happen due to fatigue or drowziness</p>
+									<p>Prevent car accidents that happen due to fatigue or drowsiness</p>
 								</header>
 								<div class="box">
 									<p><span class="image left"><img src="images/df_demo.png" alt="" /></span>
@@ -101,8 +101,7 @@
 										can run on a dedicated hardware unit. The unit will continue to silently monitor the driver.
 										The unit will monitor the driver’s alertness by observing his/her eyes and head movements.
 										If the unit deduces that the driver’s eyes are drooping down due to sleepiness or
-										his/her head is tilting in forward direction, the unit will s
-										ound an audible alarm which will alert the driver and
+										his/her head is tilting in forward direction, the unit will sound an audible alarm which will alert the driver and
 										he can take corrective action.
 
 
