Updated about me picture

--- a/about_me.html
+++ b/about_me.html
@@ -26,15 +26,13 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="index.html/#projects">Projects</a></li>
+							<li><a href="index.html#projects">Projects</a></li>
 							<li><a href="cv.html">CV</a></li>
 							<li class="active"><a href="about_me.html">About me</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="http://bit.ly/sushillinked-in" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://github.com/sushilmdpatil" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -48,7 +46,7 @@
 									<h1>About Me</h1>
 									<p>I am an aggressive problem solver with a dedicated result-oriented approach.</p>
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="images/sushil_aboutme.jpg" alt="" /></div>
 								<p>
 									I am absolutely fascinated by the impact of technology on our
 									lives and the innovation happening around us with the advent of AI, ML, NLP, Robotics etc. It is helping
@@ -143,10 +141,8 @@
 						<section>
 							<h3>Social</h3>
 							<ul class="icons alt">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="http://bit.ly/sushillinked-in" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/sushilmdpatil" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
 					</section>
