--- a/cv.html
+++ b/cv.html
@@ -49,8 +49,8 @@
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h1>Curriculum Vitae</h1>
 									<ul class="actions special">
-										<li><a href="http://bit.ly/SushilCVDownload" class="button">Download</a></li>
-										<li><a href="http://bit.ly/sushillinked-in" class="button">Visit Linkedin</a></li>
+										<li><a href="http://bit.ly/SushilCVDownload" class="button">Download CV</a></li>
+										<li><a href="http://bit.ly/sushillinked-in" class="button">Linkedin Profile</a></li>
 									</ul>
 								</header>
 								<div class="container">
