--- a/about_me.html
+++ b/about_me.html
@@ -46,7 +46,7 @@
 									<h1>About Me</h1>
 									<p>I am an aggressive problem solver with a dedicated result-oriented approach.</p>
 								</header>
-								<div class="image main"><img src="images/sushil_aboutme.jpg" alt="" /></div>
+								<div class="image main"><img src="images/sushil_aboutme.JPG" alt="" /></div>
 								<p>
 									I am absolutely fascinated by the impact of technology on our
 									lives and the innovation happening around us with the advent of AI, ML, NLP, Robotics etc. It is helping
