--- a/about_me.html
+++ b/about_me.html
@@ -46,7 +46,7 @@
 									<h1>About Me</h1>
 									<p>I am an aggressive problem solver with a dedicated result-oriented approach.</p>
 								</header>
-								<div class="image main"><img src="images/sushil_aboutme.JPG" alt="" /></div>
+								<div class="image main"><img src="images/sushil_aboutme.webp" alt="" /></div>
 								<p>
 									I am absolutely fascinated by the impact of technology on our
 									lives and the innovation happening around us with the advent of AI, ML, NLP, Robotics etc. It is helping
@@ -61,9 +61,9 @@
 									With my major specialisation in Analytics and Machine Learning
 								  I am able to convert the business problem into a technology problem.
 									I am proficient in understanding codes in python, R and C languages.
-									And, my preferred language to write code in - python.
+									And, my preferred language to write code is python.
 									With Marketing as a minor specialisation, I am able to pin-point
-									the value that the customer is seeking in any product, for which he will be paying.
+									the value that the customer is seeking in any product, for which they will be paying.
  								</p>
 								<p>
 									Wherever I contribute my efforts, I first find the purpose
