Updated About me

--- a/about_me.html
+++ b/about_me.html
@@ -44,46 +44,34 @@
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
 									<h1>About Me</h1>
-									<p>I am an aggressive problem solver with a dedicated result-oriented approach.</p>
+									<p>A tenacious problem solver with a dedicated result-oriented approach. </p>
 								</header>
 								<div class="image main"><img src="images/sushil_aboutme.webp" alt="" /></div>
 								<p>
-									I am absolutely fascinated by the impact of technology on our
-									lives and the innovation happening around us with the advent of AI, ML, NLP, Robotics etc. It is helping
-									us save time, money and efforts. It is helping big organisations
-									reduce costs, increase revenues, improve product quality, find
-									the right customers and the list goes on.
+									Since a young age, I have been fascinated by the impact technology had on our lifestyle and our process of thinking about the world and its problems. A small but vital example of this can be seen in the way Machine Learning and Artificial Intelligence has helped corporations optimize their processes, saving time, money and human efforts.
 								</p>
 								<p>
-										As an Electronics Engineer with a keen interest in Computer Science [Batch 2014-2018] I learnt the art of making machines work for me.  But then "how to solve problems for others [customers] using technology, which they pay for?", I learnt that in MBA [Batch 2018-2020].
+										With this fascination at heart, I applied for an Electronics Engineering course [Batch 2014 - 18] where I learnt the art of making machines work towards solving issues I found around me. This can be best exemplified by a small venture I had during my college years.
  								</p>
 								<p>
-									With my major specialisation in Analytics and Machine Learning
-								  I am able to convert the business problem into a technology problem.
-									I am proficient in understanding codes in python, R and C languages.
-									And, my preferred language to write code is python.
-									With Marketing as a minor specialisation, I am able to pin-point
-									the value that the customer is seeking in any product, for which they will be paying.
+									When I was in my first year, me and many of my classmates were plagued by the cost of course books. Our senior batches had the books but there was information gap. To bridge this gap between supply and demand, I built an ecommerce platform to facilitate the exchange of these books, at marginally lower prices than the market. I saw a problem and I built a solution around it.
  								</p>
 								<p>
-									Wherever I contribute my efforts, I first find the purpose
-									behind it and then start. So, all the projects that I have
-									done till now, solve a real-life problem, they have a purpose.
-									To see the projects <a href="index.html/#projects">click here</a>.
- 								</p>
+									Later, in 2017, I observed the problems faced by visually impaired people. Using my technology skills and understanding I built a device which harnesses the power of Computer Vision to help them gain independence. My team and I also applied for patent on the device [Application No. - 201821031503]. Description can be found <a href="drishti.html">here</a>.
+								</p>
+								<p>
+									But I quickly realized, through this journey, that I had to focus more on sustainability and scalability along with growth, which required capital and a business acumen. The essential question was how to bring an innovative product or service in the market which the people will appreciate and pay for, such that that innovation can be sustained. With that question in mind I began another journey at IIM Kashipur [Batch 2018 - 20], to learn the business behind a successful solution through my pursuit of an MBA.
+								</p>
+								<p>
+									All the projects that I have done till now, solve a real-life problem. They have a purpose. To read more about the projects you can <a href="index.html#projects">click here</a>
+								</p>
 
 								<header>
 									<p>Three words that define me: inquisitive, diligent and affable </p>
 								</header>
  
 								<p><b>Belief :</b><br>
-									I believe that a perfect way to solve any problem is to ask
-									the right questions. Moreover, we fail more often because we
-									solve the wrong problem than because we get the wrong solution
-									to the right problem.<br>
-									This belief has made me inquisitive and curious about everything
-									that I have not learnt yet. It has helped me understand that
-									learning is continuous and never-ending process.
+									Asking the right questions takes priority over finding the right solutions
 								</p>
  
 								<p><b>Philosophy:</b><br>
